# qtOpenGLHelloWorld

./: CMakeLists.txt
include/: MyOpenGLWidget.h
src/: MyOpenGLWidget.cpp  main.cpp
